--- a/Lab/Lab4/consumer/code/Dockerfile
+++ b/Lab/Lab4/consumer/code/Dockerfile
@@ -1,1 +1,14 @@
-app = Flask(__name__)
+FROM python
+
+# USER root
+
+RUN pip install flask
+RUN pip3 install requests
+
+
+VOLUME ["/app"]
+WORKDIR /app
+
+EXPOSE 80
+
+CMD python consumer.py runserver 0.0.0.0:80
