--- a/Lab/Lab4/docker-compose.yml
+++ b/Lab/Lab4/docker-compose.yml
@@ -1,1 +1,33 @@
-111111111
+version: '3.9'
+
+services:
+  api:
+    build: ./api/code
+    hostname: api
+    environment:
+      - CONSUMER_PORT=${CONSUMER_PORT}
+      - CONSUMER_ENDPOINT=${CONSUMER_ENDPOINT}       
+    ports: 
+      - "5000:5000"
+    volumes:
+      - ./api/code:/app       
+  consumer:
+    build: ./consumer/code
+    hostname: consumer
+    environment:
+      - API_HOST=${API_HOST}
+      - API_PORT=${API_PORT}
+      - API_ENDPOINT=${API_ENDPOINT}
+    ports:
+      - "80:80"
+    volumes:
+      - ./consumer/code:/app
+
+
+
+# mapping to app using volume
+# use "build" in services if have a dockerfile
+# import os
+# api endpoint? 
+# consumer needs to know the API name, has to create env to tell consumer
+# docker-compose up
